discussion/kv_engine/184524/184524_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch 'couchbase/neo' into 'couchbase/master'

* commit '1f42ae8cc':
  MB-54516: DCP: Optionally produce SystemEvents with FlatBuffers values

Conflicts: engines/ep/src/connhandler.cc
  engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc
Change-Id: I2f707c9054b3e13e72992360aec6ebf34eaf9bc4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-05 14:17:48.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 14:44:32.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22350/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39: error: too few arguments to function call, single argument "vbStateLock" was not specified [clang-diagnostic-error]
                        replica.wlock().replicaDrop(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:195:5: note: "wlock" declared here
    WriteHandle wlock(VBucketStateLockRef vbStateLock);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:453:39: error: too few arguments to function call, single argument "vbStateLock" was not specified [clang-diagnostic-error]
                        replica.wlock().replicaCreate(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:195:5: note: "wlock" declared here
    WriteHandle wlock(VBucketStateLockRef vbStateLock);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:468:39: error: too few arguments to function call, single argument "vbStateLock" was not specified [clang-diagnostic-error]
                        replica.wlock().replicaDropScope(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:195:5: note: "wlock" declared here
    WriteHandle wlock(VBucketStateLockRef vbStateLock);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:478:39: error: too few arguments to function call, single argument "vbStateLock" was not specified [clang-diagnostic-error]
                        replica.wlock().replicaCreateScope(
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/collections/vbucket_manifest.h:195:5: note: "wlock" declared here
    WriteHandle wlock(VBucketStateLockRef vbStateLock);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22350/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: too few arguments to function call, single argument "vbStateLock" was not specified [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22350/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51681/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\collections\vbucket_manifest_test.cc(441): error C2660: "Collections::VB::Manifest::wlock": function does not take 0 arguments ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51681/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24817/ : FAILURE

Compile error at [2023-01-05T14:41:28.138Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: no matching function for call to ?MockVBManifest::wlock()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24817/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24394/ : FAILURE

Compile error at [2023-01-05T14:38:22.703Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: no matching function for call to ?MockVBManifest::wlock()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24394/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25676/ : FAILURE

Compile error at [2023-01-05T14:40:49.363Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: too few arguments to function call, single argument "vbStateLock" was not specified
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25676/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32813/ : FAILURE

Compile error at [2023-01-05T14:43:39.732Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: too few arguments to function call, single argument "vbStateLock" was not specified
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32813/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12158/ : FAILURE

Compile error at [2023-01-05T14:28:06.615Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: no matching function for call to ?MockVBManifest::wlock()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12158/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23921/ : FAILURE

Compile error at [2023-01-05T14:37:37.365Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: too few arguments to function call, single argument "vbStateLock" was not specified
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23921/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1113/ : FAILURE

Compile error at [2023-01-05T14:36:35.981Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: no matching function for call to ?MockVBManifest::wlock()?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1113/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12071/ : FAILURE

Compile error at [2023-01-05T14:39:21.889Z] ../kv_engine/engines/ep/tests/module_tests/collections/vbucket_manifest_test.cc:441:39:
error: too few arguments to function call, single argument "vbStateLock" was not specified
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12071/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21978/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43387/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
